src/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

#root {
  font-family: 'Roboto', sans-serif;
  max-width: 1440px;
  width: 100%;
  margin: 0 auto;
  color: #ffffff;
  text-rendering: optimizeLegibility;
}
.root__header {
  background-image: url("../images/bg-desktop-dark.jpg");
  display: flex; 
  justify-content:center;
  align-items: center; 
  min-height: 20vh;
  font-size: 18px;
}
.header__h1 {
  margin: 0 auto;
  margin-bottom: 100px;
  width: 100px;
  padding-right:40%;
}
.todo {
  font-size: 20px;
}
.todo__container{
  margin: 0 auto;
  width: 50%;
  background-color:  hsl(235, 24%, 19%);
  margin-top: -30px;
  height: fit-content;
  padding-bottom: 10px;
}
.todo__form {
  display: flex;
  flex-direction: column;
  margin-top: -70px;
  font-size: 18px;
}
.todo__form-input {
  background-color:  hsl(235, 24%, 19%);
  padding-top: 10px;
  width: 100%;
  padding-bottom: 10px;
  margin: 0 auto;
  font-size: 18px;
  text-align: center;
  outline: none;
  border:none;
  color: white;
  box-sizing: border-box;
  
}

.todo__elements{
  display: flex;
  width: 50%;
  flex-direction: column;
  margin: 0 auto;
  margin-top: 50px;
  background-color: hsl(235, 24%, 19%);
  text-align: center;
}
.todo-list{
  margin-top: 40px;
  list-style-type: none;
  padding: 0;
}
.todo-list li {
  width: 90%;
  margin: 0 auto;
  padding-top: 10px;
  /* padding-left: 40px; */
  padding-bottom: 10px;
  text-align: left;
  border-bottom: 1px solid hsl(233, 14%, 35%);
  transition: all 1s ease;
}
.todo-list li:hover .delete-btn {
  opacity: 1;
}

.delete-btn {
  cursor: pointer;
  background-color: transparent;
  border: 0;
  color: rgba(255, 255, 255, 0.775);
  font-size:20px;
  line-height: 16px;
  padding: 3px 4px;
  position: absolute;
  top: 50%;
  right: 0;
  transform: translate(-100%, -50%);
  opacity: 0;
  transition: opacity 1s ease;
}
.todo-li{
  position: relative;
}
.todo-li span{
  padding-left: 40px;
}

.todo-list-completed-button{
  position: absolute;
  left: 0;
  top: 50%;
  transform: translate(-100%, -50%);
  min-width: 15px;
  max-width: 15px;
  min-height: 15px;
  background: transparent;
  border-radius: 5px;
  border: 1px solid rgb(222, 240, 246);
  transition: background 1s ease;
}
.completed {
  position: absolute;
  left: 0;
  top: 50%;
  transform: translate(-100%, -50%);
  min-width: 15px;
  max-width: 15px;
  min-height: 15px;
  background: rgb(0, 255, 0);
  border-radius: 5px;
  border: 1px solid transparent;
}


.done-text {
  color: hsl(233, 14%, 35%);
  text-decoration: line-through;
}
.todo__form-footer {
  display: flex;
  justify-content: space-evenly;
  color: hsl(233,14%,45%);
  padding: 5px;
}
.todo__form-footer small:hover {
  cursor: pointer;
  opacity: 0.7;
  color: white
}
.todo__form-footer-middle{
  display: flex;
  min-width: 250px;
  justify-content: space-evenly;
  align-items: center;
}

.todo-list:hover button, span {
  cursor: pointer;
}
.root__todoo{
  min-height: 70vh;
  background: hsl(235, 21%, 11%);
  margin: 0 auto;
  display: flex;
  justify-content: center;
}
.footer{
 font-size: 10px;
}
.root_footer {
  display: flex; 
  margin: 0 auto;
  justify-content: center;
  align-items: flex-end; 
  min-height: 10px;
  background: hsl(235, 21%, 11%);
}
.mobile-version{
  display: none;
}

@media screen and (max-width: 1000px) {
 
  .todo__form-footer-middle {
    display: none;
  }
  .todo__form-footer{
    padding-bottom: 15px;
  }
  .mobile-version{
    display: flex;
    border-top: 30px solid hsl(235, 21%, 11%);
    padding-top: 15px;
    justify-content: center;
    gap: 10px;
    padding-bottom: 5px;
  }
}
@media screen and (max-width: 760px) {
  .todo__container{
    width: 70%;
    font-size: 18px;
  }
  .todo-list-completed-button{
    left: 15px;
  }
  .completed {
     left:15px
    }
}
@media screen and (max-width: 600px) {
  .todo__container{
    width: 95%;
    font-size: 18px;
  }
}

